--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>עשרים שאלות של שניר</title>
+    <title>עשרים שאלות אלטרנטיביות</title>
     <link rel="stylesheet" href="style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -36,7 +36,7 @@
       <!-- headline  -->
 
       <div class="container">
-        <h1>עשרים שאלות של שניר</h1>
+        <h1>עשרים שאלות אלטרנטיביות</h1>
         <h3>הצטיידו בכמה חברימות, קפה ועוגה, <br />ונצחו את השאלון ביחד!</h3>
       </div>
     </section>
@@ -53,7 +53,7 @@
       <!-- comments form  -->
       <div class="container">
         <h3>
-          רוצה לומר משהו לשניר? <br />
+          רוצה לומר לנו משהו? <br />
           להציע שאלה משלך?<br />
           מוזמנים ומוזמנות
         </h3>
@@ -61,7 +61,7 @@
       <form action="">
         <input type="text" class="name" placeholder="שמך?" required />
         <textarea
-          placeholder="מה תרצה לומר לשניר?"
+          placeholder="מה תרצה לומר לנו?"
           class="textarea"
           name="comment"
           id="comment"
